syntax = "proto3";

import "google/protobuf/timestamp.proto";

package document;

option go_package = "/document";

enum Type {
	DEFAULT_DOCUMENT = 0;
	PASSPORT = 1;
	INTERNAL_PASSPORT = 2;
	FOREIGN_PASSPORT = 3;
	IDENTITY_CARD = 4;
	DRIVER_LICENSE = 5;
	HUNTING_LICENSE = 6;
	FIREARMS_LICENSE = 7;
	MEDICAL_INSURANCE = 8;
	PROPERTY_INSURANCE = 9;
	VEHICLE_INSURANCE = 10;
	PERSONAL_INSURANCE = 11;
	VISA = 12;
	STUDENT_VISA = 13;
	WORK_PERMIT = 14;
	RESIDENCE_PERMIT = 15;
	CREDIT_CARD = 16;
	CERTIFICATE = 17;
	VACCINATION_CERTIFICATE = 18;
	WARRANTY_CERTIFICATE = 19;
	COUPON = 20;
	OTHER = 21;
}

message Document {
	string ID = 1;
	string userID = 2;
	Type type = 3;
	string title = 4;
	string description = 5;
	google.protobuf.Timestamp expiresAt = 6;
}

// Message for document exported as JSON format with lesser types
message DocumentJSON {
	string ID = 1;
	string userID = 2;
	Type type = 3;
	string title = 4;
	string description = 5;
	string expiresAt = 6;
}

message DocumentTypesCount {
	int32 type = 1;
	int64 count = 2;
}

message Notification {
	string ID = 1;
	string documentID = 2;
	google.protobuf.Timestamp date = 3;
}

// Message for notification exported as JSON format with lesser types
message NotificationJSON {
	string ID = 1;
	string documentID = 2;
	string date = 3;
}

message DocumentCreateRequest {
	Document documentEntry = 1;
}

message NotificationCreateRequest {
	Notification notificationEntry = 1;
	string userID = 2;
}

message DocumentRequest {
	string documentID = 1;
	string userID = 2;
}

message DocumentsRequest {
	string userID = 1;
}

message NotificationsRequest {
	string userID = 1;
	string documentID = 2;
}

message ResponseNotificationsList {
	string result = 1;
	repeated Notification notifications = 2;
}

message Response {
	string result = 1;
}

message ResponseCount {
	string result = 1;
	int64 count = 2;
}

message ResponseDocumentsStatistics {
	string result = 1;
	int64 total = 2;
	repeated DocumentTypesCount types = 3;
}

message ResponseDocument {
	string result = 1;
	Document document = 2;
}

message ResponseDocumentCreate {
	string result = 1;
	string documentId = 2;
}

message ResponseDocumentsList {
	string result = 1;
	repeated Document documents = 2;
}

message ResponseNotifications {
	string result = 1;
	google.protobuf.Timestamp date = 2;
}

service DocumentService {
	rpc Create(DocumentCreateRequest) returns (ResponseDocumentCreate);
	rpc Edit(DocumentCreateRequest) returns (Response);
	rpc Delete(DocumentRequest) returns (Response);
	rpc GetOne(DocumentRequest) returns (ResponseDocument);
	rpc GetAll(DocumentsRequest) returns (ResponseDocumentsList);
	rpc GetUserStatistics(DocumentsRequest) returns (ResponseDocumentsStatistics);
}

service NotificationService {
	rpc Create(NotificationCreateRequest) returns (Response);
	rpc Edit(NotificationCreateRequest) returns (Response);
	rpc Delete(NotificationCreateRequest) returns (Response);
	rpc GetAll(NotificationsRequest) returns (ResponseNotificationsList);
	rpc Count(NotificationsRequest) returns (ResponseCount);
}